final version 10.8.2022 v.8 - minor layout fixes on mobile

--- a/style.css
+++ b/style.css
@@ -707,10 +707,6 @@ p,
   .settings h2 {
     margin-block: 9rem 5rem;
   }
-
-  .settings-btns {
-    margin-top: 12rem;
-  }
 }
 
 @media screen and (max-width: 33.125em /*530px*/) {
